--- a/homework.ipynb
+++ b/homework.ipynb
@@ -493,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 128,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -503,33 +503,28 @@
         "def get_marginal_distribution(input_data, selected_variable):\n",
         "    counts = {}\n",
         "    for index, input_row in input_data.iterrows():\n",
-        "        output_key = input_row[selected_variable]\n",
+        "        output_key = int(input_row[selected_variable])\n",
         "        counts[output_key] = counts.get(output_key, 0) + 1\n",
         "             \n",
         "    total_count = sum(counts.values())\n",
         "             \n",
         "    return {key: count / total_count for key, count in counts.items()}\n",
         "\n",
-        "\n",
         "p1 = get_marginal_distribution(mango_data, \"green_rating\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 129,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "{np.int64(1): 0.25,\n",
-              " np.int64(2): 0.125,\n",
-              " np.int64(3): 0.25,\n",
-              " np.int64(5): 0.25,\n",
-              " np.int64(4): 0.125}"
+              "{1: 0.25, 2: 0.125, 3: 0.25, 5: 0.25, 4: 0.125}"
             ]
           },
-          "execution_count": 122,
+          "execution_count": 129,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -550,27 +545,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 134,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p2 = ..."
+        "def get_marginal_distribution_p2(input_data, selected_variable_1, selected_variable_2):\n",
+        "    counts = {}\n",
+        "    for index, input_row in input_data.iterrows():\n",
+        "        output_key = (int(input_row[selected_variable_1]), int(input_row[selected_variable_2]))\n",
+        "        counts[output_key] = counts.get(output_key, 0) + 1\n",
+        "             \n",
+        "    total_count = sum(counts.values())\n",
+        "             \n",
+        "    return {key: count / total_count for key, count in counts.items()}\n",
+        "\n",
+        "p2 = get_marginal_distribution_p2(mango_data, \"yellow_rating\", \"softness\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 135,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "{(5, 4): 0.125,\n",
+              " (5, 5): 0.125,\n",
+              " (4, 3): 0.125,\n",
+              " (3, 2): 0.25,\n",
+              " (1, 1): 0.25,\n",
+              " (2, 1): 0.125}"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 135,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -591,27 +601,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p3 = ..."
+        "def build_marginal_distribution_p3(input_data):\n",
+        "    counts = {}\n",
+        "    for index, input_row in input_data.iterrows():\n",
+        "        output_key = tuple((int(input_row[\"yellow_rating\"]), int(input_row[\"rated_flavor\"])))\n",
+        "        counts[output_key] = counts.get(output_key, 0) + 1\n",
+        "             \n",
+        "    total_count = sum(counts.values())\n",
+        "             \n",
+        "    return {key: count / total_count for key, count in counts.items()}\n",
+        "\n",
+        "mango_distribution_p3 = build_marginal_distribution_p3(mango_data)\n",
+        "\n",
+        "def get_prob_distribution_p3(input_distribution, condition_func):\n",
+        "    temp = {k: p for k, p in input_distribution.items() if condition_func(k)}\n",
+        "    condition_probability = sum(temp.values())\n",
+        "     \n",
+        "    return {k: p / condition_probability for k, p in temp.items()}\n",
+        "\n",
+        "p3 = get_prob_distribution_p3(mango_distribution_p3, lambda r: r[0] == 1)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 146,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "{(1, 1): 1.0}"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 146,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -632,27 +660,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 154,
       "metadata": {},
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p4 = ..."
+        "def build_marginal_distribution_p4(input_data):\n",
+        "    counts = {}\n",
+        "    for index, input_row in input_data.iterrows():\n",
+        "        output_key = tuple((int(input_row[\"softness\"]), int(input_row[\"estimated_flavor\"])))\n",
+        "        counts[output_key] = counts.get(output_key, 0) + 1\n",
+        "             \n",
+        "    total_count = sum(counts.values())\n",
+        "             \n",
+        "    return {key: count / total_count for key, count in counts.items()}\n",
+        "\n",
+        "mango_distribution_p4 = build_marginal_distribution_p4(mango_data)\n",
+        "\n",
+        "def get_prob_distribution_p3(input_distribution, condition_func):\n",
+        "    temp = {k: p for k, p in input_distribution.items() if condition_func(k)}\n",
+        "    condition_probability = sum(temp.values())\n",
+        "     \n",
+        "    return {k: p / condition_probability for k, p in temp.items()}\n",
+        "\n",
+        "p4 = get_prob_distribution_p3(mango_distribution_p4, lambda r: r[0] >= 3)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 153,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "{(4, 4): 0.3333333333333333,\n",
+              " (5, 5): 0.3333333333333333,\n",
+              " (3, 3): 0.3333333333333333}"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 153,
           "metadata": {},
           "output_type": "execute_result"
         }
