generative ai usage

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -2341,7 +2341,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "YOUR ANSWER HERE"
+        "No generative AI, just a lot of looking through documentation for Pandas"
       ]
     }
   ],
